syntax="proto3";
package auth;
option go_package="./pkg/pb";
service AuthService{
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

//Register

message SignUpRequest{
    string firstname=1;
    string lastname=2;
    string email=3;
    string password=4;
    string confirmpassword=5;
    string phone=6;
}
message SignUpResponse{
    int64 status=1;
    string error=2;
}

//Login

message LoginRequest{
    string email=1;
    string password=2;
}
message LoginResponse{
    int64 status=1;
    string error=2;
    string token=3;
}

//Validate

message ValidateRequest{string token = 1;}

message ValidateResponse{
    int64 status=1;
    string error=2;
    int64 userId=3;
}

message ListUsersRequest {}

message User {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string status = 6;
}

message ListUsersResponse {
    int64 status=1;
    string error = 2; // Optional field for errors
    repeated User users = 3;
}